--- a/source/2010/07/17/devfort-cohort-4-prioritisation.toml
+++ b/source/2010/07/17/devfort-cohort-4-prioritisation.toml
@@ -1,34 +1,44 @@
 title = "Published YouTube video “/dev/fort: cohort 4 prioritisation”"
 published = 2010-07-17T22:05:50Z
-video_id = "mnDw_JPMkFM"
 origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
+tag = [ "devfort", "devfort-4",]
+image = "https://i.ytimg.com/vi/mnDw_JPMkFM/hqdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/mnDw_JPMkFM/default.jpg"
+medium = "https://i.ytimg.com/vi/mnDw_JPMkFM/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/mnDw_JPMkFM/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/mnDw_JPMkFM/sddefault.jpg"
+w480 = "https://mnf.m17s.net/vi/mnDw_JPMkFM/hqdefault.480.jpg"
+
+[youtube]
+id = "mnDw_JPMkFM"
+title = "/dev/fort: cohort 4 prioritisation"
 description = "Grouping and prioritising ideas for the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n"
 views = "237"
 likes = "0"
 dislikes = "1"
 comments = "0"
-tag = [ "devfort", "devfort-4",]
-video_title = "/dev/fort: cohort 4 prioritisation"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/mnDw_JPMkFM/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/mnDw_JPMkFM/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/mnDw_JPMkFM/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/mnDw_JPMkFM/sddefault.jpg"
 width = 640
 height = 480
