--- a/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
+++ b/source/2020/09/24/horizon-zero-dawn-chapter-2-the-lesson.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 2 — The Lesson”"
 published = 2020-09-24T12:22:10Z
-video_id = "QvB2OJYf448"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/QvB2OJYf448/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/QvB2OJYf448/default.jpg"
+medium = "https://i.ytimg.com/vi/QvB2OJYf448/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/QvB2OJYf448/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/QvB2OJYf448/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/QvB2OJYf448/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/QvB2OJYf448/maxresdefault.480.jpg"
+
+[youtube]
+id = "QvB2OJYf448"
+title = "Horizon Zero Dawn — Chapter 2 — The Lesson"
 description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 2 Aloy gets a new weapon, and Rost tries to teach her an important lesson.\n\n00:00 Opening titles\n00:21 A conversation with Rost\n06:24 Odd Grata\n27:40 Karst\n31:20 Tutorial: Tripcaster\n36:06 Back to Odd Grata\n39:16 The Point of the Spear\n53:57 Map\n54:13 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "140"
 likes = "2"
 dislikes = "1"
 comments = "1"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 2 — The Lesson"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/QvB2OJYf448/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/QvB2OJYf448/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/QvB2OJYf448/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/QvB2OJYf448/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/QvB2OJYf448/maxresdefault.jpg"
 width = 1280
 height = 720
