--- a/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
+++ b/source/2020/12/18/horizon-zero-dawn-chapter-26-dusk-mesa.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 26 — Dusk Mesa”"
 published = 2020-12-18T08:15:00Z
-video_id = "Ip3ZrAiSQT4"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/default.jpg"
+medium = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/Ip3ZrAiSQT4/maxresdefault.480.jpg"
+
+[youtube]
+id = "Ip3ZrAiSQT4"
+title = "Horizon Zero Dawn — Chapter 26 — Dusk Mesa"
 description = "In Chapter 26, Aloy cleans up Dusk Mesa.\n\n0:00 Opening titles\n0:21 Recap\n1:17 Corrupted Zone\n8:50 Stalkers\n21:40 A Curious Proposal\n26:00 Onwards\n29:30 Sunstone Rock: Completed\n34:50 Vantage: Monument Valley\n37:10 Onwards\n40:10 Cauldron Xi entrance\n46:22 Map\n46:40 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "18"
 likes = "0"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 26 — Dusk Mesa"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/Ip3ZrAiSQT4/maxresdefault.jpg"
 width = 1280
 height = 720
