--- a/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
+++ b/source/2010/07/19/devfort-cohort-4-last-day-of-coding.toml
@@ -1,34 +1,44 @@
 title = "Published YouTube video “/dev/fort: cohort 4, last day of coding”"
 published = 2010-07-19T09:34:04Z
-video_id = "Oqpljgjs164"
 origin = "youtube-mnf"
 origin_link_text = "Mark Norman Francis channel"
 origin_link_url = "https://www.youtube.com/channel/UChCfyxtJP1e4eO0v7L1CUJw"
 type = "video"
+tag = [ "devfort", "devfort-4",]
+image = "https://i.ytimg.com/vi/Oqpljgjs164/hqdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/Oqpljgjs164/default.jpg"
+medium = "https://i.ytimg.com/vi/Oqpljgjs164/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/Oqpljgjs164/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/Oqpljgjs164/sddefault.jpg"
+w480 = "https://mnf.m17s.net/vi/Oqpljgjs164/hqdefault.480.jpg"
+
+[youtube]
+id = "Oqpljgjs164"
+title = "/dev/fort: cohort 4, last day of coding"
 description = "The last day of coding on the fourth devfort.com project. \r\n\r\nCreated with iTimeLapse.\n\n"
 views = "989"
 likes = "3"
 dislikes = "3"
 comments = "1"
-tag = [ "devfort", "devfort-4",]
-video_title = "/dev/fort: cohort 4, last day of coding"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/Oqpljgjs164/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/Oqpljgjs164/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/Oqpljgjs164/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/Oqpljgjs164/sddefault.jpg"
 width = 640
 height = 480
