--- a/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
+++ b/source/2020/10/02/horizon-zero-dawn-chapter-4-the-proving.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 4 — The Proving”"
 published = 2020-10-02T07:15:01Z
-video_id = "NrRYFFW2obY"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/NrRYFFW2obY/default.jpg"
+medium = "https://i.ytimg.com/vi/NrRYFFW2obY/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/NrRYFFW2obY/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/NrRYFFW2obY/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/NrRYFFW2obY/maxresdefault.480.jpg"
+
+[youtube]
+id = "NrRYFFW2obY"
+title = "Horizon Zero Dawn — Chapter 4 — The Proving"
 description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 4 Aloy attends the Proving, hoping to win to gain some answers from the Matriarchs.\n\n00:00 Opening titles\n00:21 Recap\n01:15 Mother's Heart\n47:17 The Proving\n1:00:37 Map\n1:00:58 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "53"
 likes = "5"
 dislikes = "0"
 comments = "1"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 4 — The Proving"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/NrRYFFW2obY/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/NrRYFFW2obY/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/NrRYFFW2obY/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/NrRYFFW2obY/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/NrRYFFW2obY/maxresdefault.jpg"
 width = 1280
 height = 720
