--- a/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
+++ b/source/2020/10/23/horizon-zero-dawn-chapter-10-heading-west.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 10 — Heading West”"
 published = 2020-10-23T07:15:01Z
-video_id = "7Sr4wgFOAEM"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/7Sr4wgFOAEM/default.jpg"
+medium = "https://i.ytimg.com/vi/7Sr4wgFOAEM/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/7Sr4wgFOAEM/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/7Sr4wgFOAEM/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/7Sr4wgFOAEM/maxresdefault.480.jpg"
+
+[youtube]
+id = "7Sr4wgFOAEM"
+title = "Horizon Zero Dawn — Chapter 10 — Heading West"
 description = "A play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nIn Chapter 10, Aloy heads from the Cauldron to Daytower, the Carja fort.\n\n00:00 Opening titles\n00:21 Heading to Hunter's Gathering\n11:35 Underequipped\n32:03 Heading to Daytower\n1:00:09 Map\n1:00:27 End screen\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "30"
 likes = "3"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 10 — Heading West"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/7Sr4wgFOAEM/maxresdefault.jpg"
 width = 1280
 height = 720
