--- a/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
+++ b/source/2020/11/02/horizon-zero-dawn-chapter-13-way-of-broken-stones.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 13 — Way of Broken Stones”"
 published = 2020-11-02T08:15:01Z
-video_id = "hbcX_CS4rVs"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/hbcX_CS4rVs/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/hbcX_CS4rVs/default.jpg"
+medium = "https://i.ytimg.com/vi/hbcX_CS4rVs/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/hbcX_CS4rVs/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/hbcX_CS4rVs/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/hbcX_CS4rVs/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/hbcX_CS4rVs/maxresdefault.480.jpg"
+
+[youtube]
+id = "hbcX_CS4rVs"
+title = "Horizon Zero Dawn — Chapter 13 — Way of Broken Stones"
 description = "In Chapter 13, Aloy makes her way to Meridian.\n\n0:00 Opening titles\n0:21 Recap\n0:47 Way of Broken Stones\n23:42 Meridian\n29:00 Olin's apartment\n36:26 The Hunters Lodge\n47:53 Datapoint: Record of Redmaw 1\n52:55 Datapoint: Olin's Journal\n55:26 Map\n55:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "53"
 likes = "1"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 13 — Way of Broken Stones"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/hbcX_CS4rVs/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/hbcX_CS4rVs/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/hbcX_CS4rVs/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/hbcX_CS4rVs/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/hbcX_CS4rVs/maxresdefault.jpg"
 width = 1280
 height = 720
