--- a/source/2021/01/11/horizon-zero-dawn-chapter-32-blue-light.toml
+++ b/source/2021/01/11/horizon-zero-dawn-chapter-32-blue-light.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 32 — Blue Light”"
 published = 2021-01-11T08:15:02Z
-video_id = "XinX8wBdBwM"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/XinX8wBdBwM/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/XinX8wBdBwM/default.jpg"
+medium = "https://i.ytimg.com/vi/XinX8wBdBwM/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/XinX8wBdBwM/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/XinX8wBdBwM/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/XinX8wBdBwM/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/XinX8wBdBwM/maxresdefault.480.jpg"
+
+[youtube]
+id = "XinX8wBdBwM"
+title = "Horizon Zero Dawn — Chapter 32 — Blue Light"
 description = "In Chapter 32, Aloy comes across a Banuk camp where the machines are docile.\n\n0:00 Opening titles\n0:21 Recap\n1:20 From Valleymeet onwards\n32:40 A Moment's Peace\n50:20 Onwards\n1:00:03 Datapoint: Metal Flower — Mark I (H)\n1:00:21 Map\n1:00:39 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "10"
 likes = "0"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 32 — Blue Light"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/XinX8wBdBwM/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/XinX8wBdBwM/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/XinX8wBdBwM/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/XinX8wBdBwM/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/XinX8wBdBwM/maxresdefault.jpg"
 width = 1280
 height = 720
