--- a/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
+++ b/source/2021/01/18/horizon-zero-dawn-chapter-34-the-cut.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 34 — The Cut”"
 published = 2021-01-18T08:15:04Z
-video_id = "hvDY-HKgFVQ"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/hvDY-HKgFVQ/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/hvDY-HKgFVQ/default.jpg"
+medium = "https://i.ytimg.com/vi/hvDY-HKgFVQ/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/hvDY-HKgFVQ/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/hvDY-HKgFVQ/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/hvDY-HKgFVQ/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/hvDY-HKgFVQ/maxresdefault.480.jpg"
+
+[youtube]
+id = "hvDY-HKgFVQ"
+title = "Horizon Zero Dawn — Chapter 34 — The Cut"
 description = "In Chapter 34, Aloy ventures into Banuk lands.\n\n0:00 Opening titles\n0:21 Into the Frozen Wilds\n23:22 Song's Edge\n37:50 The Shaman's Path, part 1\n50:06 Map\n50:24 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "10"
 likes = "0"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 34 — The Cut"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/hvDY-HKgFVQ/maxresdefault.jpg"
 width = 1280
 height = 720
