--- a/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
+++ b/source/2021/02/15/horizon-zero-dawn-chapter-42-cyan.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 42 — CYAN”"
 published = 2021-02-15T08:15:00Z
-video_id = "9mBRiqSf53M"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/9mBRiqSf53M/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/9mBRiqSf53M/default.jpg"
+medium = "https://i.ytimg.com/vi/9mBRiqSf53M/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/9mBRiqSf53M/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/9mBRiqSf53M/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/9mBRiqSf53M/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/9mBRiqSf53M/maxresdefault.480.jpg"
+
+[youtube]
+id = "9mBRiqSf53M"
+title = "Horizon Zero Dawn — Chapter 42 — CYAN"
 description = "In Chapter 42, Aloy talks to CYAN and comes across a man accused of murder.\n\n0:00 Opening titles\n0:21 The Forge of Winter, concluded\n30:20 Onwards\n42:02 Frontier Justice\n57:22 Map\n57:45 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "19"
 likes = "0"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 42 — CYAN"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/9mBRiqSf53M/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/9mBRiqSf53M/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/9mBRiqSf53M/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/9mBRiqSf53M/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/9mBRiqSf53M/maxresdefault.jpg"
 width = 1280
 height = 720
