--- a/source/2021/05/03/horizon-zero-dawn-chapter-58-goodbyes.toml
+++ b/source/2021/05/03/horizon-zero-dawn-chapter-58-goodbyes.toml
@@ -1,40 +1,51 @@
 title = "Published YouTube video “Horizon Zero Dawn — Chapter 58 — Goodbyes”"
 published = 2021-05-03T15:30:04Z
-video_id = "OqGikeIwBhY"
 origin = "youtube-gs"
 origin_link_text = "Game Shows channel"
 origin_link_url = "https://www.youtube.com/channel/UCI0KNfM-b2vXKPY4QwJ0_oQ"
 type = "video"
+tag = [ "horizon-zero-dawn", "game-shows",]
+theme = "game-shows"
+image = "https://i.ytimg.com/vi/OqGikeIwBhY/maxresdefault.jpg"
+
+[thumbnail]
+default = "https://i.ytimg.com/vi/OqGikeIwBhY/default.jpg"
+medium = "https://i.ytimg.com/vi/OqGikeIwBhY/mqdefault.jpg"
+high = "https://i.ytimg.com/vi/OqGikeIwBhY/hqdefault.jpg"
+standard = "https://i.ytimg.com/vi/OqGikeIwBhY/sddefault.jpg"
+maxres = "https://i.ytimg.com/vi/OqGikeIwBhY/maxresdefault.jpg"
+w480 = "https://mnf.m17s.net/vi/OqGikeIwBhY/maxresdefault.480.jpg"
+
+[youtube]
+id = "OqGikeIwBhY"
+title = "Horizon Zero Dawn — Chapter 58 — Goodbyes"
 description = "In Chapter 58, Aloy says goodbye to a couple of people.\n\n0:00 Opening titles\n0:21 Leaving Gaia Prime\n1:37 Datapoint: Sobeck Journal, 11-19-64 R\n3:24 Onwards\n20:45 Acquired Taste, part 5\n24:35 Onwards\n35:20 Ancient Armory, concluded\n40:30 Onwards\n46:00 Visiting Rost's grave\n48:35 Onwards, towards Meridian\n58:44 Map\n59:09 End screen\n\nA play through of the game Horizon Zero Dawn. Including all of the main quest and many of the more interesting side quests. No tedious commentary.\n\nMap by StreetPiet. https://www.thingiverse.com/thing:3355191\n\n"
 views = "6"
 likes = "0"
 dislikes = "0"
 comments = "0"
-tag = [ "horizon-zero-dawn", "game-shows",]
-theme = "game-shows"
-video_title = "Horizon Zero Dawn — Chapter 58 — Goodbyes"
 
-[thumbnails.default]
+[youtube.thumbnails.default]
 url = "https://i.ytimg.com/vi/OqGikeIwBhY/default.jpg"
 width = 120
 height = 90
 
-[thumbnails.medium]
+[youtube.thumbnails.medium]
 url = "https://i.ytimg.com/vi/OqGikeIwBhY/mqdefault.jpg"
 width = 320
 height = 180
 
-[thumbnails.high]
+[youtube.thumbnails.high]
 url = "https://i.ytimg.com/vi/OqGikeIwBhY/hqdefault.jpg"
 width = 480
 height = 360
 
-[thumbnails.standard]
+[youtube.thumbnails.standard]
 url = "https://i.ytimg.com/vi/OqGikeIwBhY/sddefault.jpg"
 width = 640
 height = 480
 
-[thumbnails.maxres]
+[youtube.thumbnails.maxres]
 url = "https://i.ytimg.com/vi/OqGikeIwBhY/maxresdefault.jpg"
 width = 1280
 height = 720
